--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
   <img src="gfx4.png" style="height:100%; margin-right:0.5%; border-right:1px solid black;"/>
 </div>
 <h2 id="glory-to-the-people-s-republic-of-china-">Glory to the People’s Republic of China!</h2>
+
+<a href="https://twitter.com/lmao_ism?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @lmao_ism</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+
 <p>Lmaoism is a Web3 net-art project to inform and educate the masses on the philosophies of Marxist-Leninist dialectical materialism, Communism with Chinese Characteristics, and Xi Jinping Thought. Our collection of 888 limited-edition digital paintings combine socialist realist iconography from the historical revolutionary mass-media campaigns of the Communist Party of China with contemporary digital art motifs in the style of today’s twenty-first-century online youth.</p>
 <p>We on the Lmaoism team believe that to express laughter and exuberance is to embrace the revolutionary spirit of dialectical materialism when experienced at its highest potential - though the revolutionary has a difficult road ahead of him, strewn with the foulest of obstacles flung in his path by the bourgeois-reactionary enemy, he nevertheless joyfully wages struggle on behalf of the global proletariat, secure in the justice of his cause, and the certainty of imperialist-capitalism’s inevitable defeat.</p>
 <h2 id="how-will-the-art-be-distributed-">How will the art be distributed?</h2>
