--- a/index.html
+++ b/index.html
@@ -1,34 +1,84 @@
 <title>🇨🇳😂 </title>
 <style type="text/css">
-  @media only screen and (min-width: 400px) {
+  body {
+    background-color:#450203;
+    color:#ffcc00;
+    margin-bottom:100px;
+  }
+  @media only screen and (min-width: 600px) {
     body {
       margin:5%;
-      background-color:#f2e4d1;
-      color:#3a250a;
+      text-align: center;
     }
+  }
+  @media only screen and (max-width: 599px) {
+    body {
+      margin:0px;
+      text-align: center;
+    }
+  }
+  #main {
+    text-align: left;
+    border: 1px #ffcc00 solid;
+    max-width:800px;
+    padding:5%;
   }
   h1 {
     margin-top:0px;
     text-align:center;
-    font-size:96px;
+    font-size:64px;
+  }
+  @media only screen and (min-width: 900px) {
+    h1 {
+      font-size:64px;
+    }
+  }
+  @media only screen and (max-width: 899px) {
+    h1 {
+      font-size:36px;
+    }
   }
   p {
+    text-indent: 2em;
     margin-top:15px;
     margin-bottom:15px;
+    line-height: 1.6;
+  }
+  #art-display {
+    background-image:url(lmaoismbanner.png);
+    background-size:100% 100%;
+    border-radius:3px;
+  }
+  #twitter-button {
+    position:fixed;
+    bottom: 5px;
+    right: 5px;
+    font-size:36px;
+    background-color:#ff0000;
+    padding:5px;
+  }
+  #twitter-button a {
+    text-decoration:none;
+    color:#ffcc00;
+  }
+  #twitter-button:hover {
+    background-color:#ffcc00;
+  }
+  #twitter-button:hover a {
+    background-color:#ff0000;
+  }
+  #lmaoism-banner {
+    width:100%;
   }
 </style>
-
+<div id="main">
 <div style="text-align:center; font-size:48px; margin-bottom:0px;">🇨🇳😂</div>
-<h1 id="welcome-comrades-">Welcome, comrades!</h1>
-<div style="height:20vw; width:90vw; background-color:rgb(255, 197, 197);">
-  <img src="gfx1.png" style="height:100%; margin-right:2%; border-right:1px solid black;"/>
-  <img src="gfx2.png" style="height:100%; margin-right:2%; border-right:1px solid black;"/>
-  <img src="gfx3.png" style="height:100%; margin-right:2%; border-right:1px solid black;"/>
-  <img src="gfx4.png" style="height:100%; margin-right:0.5%; border-right:1px solid black;"/>
+<h1 id="welcome-comrades-">🎊 Welcome, comrades! 🎉</h1>
+<div id="twitter-button">
+  <a href="https://twitter.com/lmao_ism?ref_src=twsrc%5Etfw" data-show-count="false">Follow @lmao_ism <br/> on Twitter!</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
+<img id="lmaoism-banner" src="lmaoismbanner.png" />
 <h2 id="glory-to-the-people-s-republic-of-china-">Glory to the People’s Republic of China!</h2>
-
-<a href="https://twitter.com/lmao_ism?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @lmao_ism</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
 <p>Lmaoism is a Web3 net-art project to inform and educate the masses on the philosophies of Marxist-Leninist dialectical materialism, Communism with Chinese Characteristics, and Xi Jinping Thought. Our collection of 888 limited-edition digital paintings combine socialist realist iconography from the historical revolutionary mass-media campaigns of the Communist Party of China with contemporary digital art motifs in the style of today’s twenty-first-century online youth.</p>
@@ -58,3 +108,9 @@
 <p>Disseminating digital artworks of a socialist-realist character, while an important revolutionary task in itself, will be only the initial cusp of the Lmaoism project. Our goal is to develop the world’s first fully-digital revolutionary Communist Party entirely on the blockchain, the uncensorable internationally-accessible nature of which will allow our ideals to spread like wildfire among the globally-online proletariat. DAO technology can allow shared ownership of revolutionary resources trustlessly coordinated by a central committee, which can be delegated to comrades across the globe based on the philosophy of Karl Marx &amp; Fredrick Engels: “From each according to his ability, to each according to his need!”</p>
 <p>We are researching ways to incorporate “code is law” philosophy into Marxist-Leninist praxes such as the mass line, democratic centralism, and self-criticism. Through the use of trustless technology, we can further the discipline amongst party ranks and ensure an unyielding revolutionary spirit of solidarity as we wage our immortal struggle against imperialism and the oppressive institutions which have shackled us in chains.</p>
 <p><em>© 2022 “CLIQUE” - Creative Commons Attribution 4.0 International (CC By 4.0)</em></p>
+</div>
+<br/>
+<br/>
+<br/>
+<br/>
+
