--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     margin-top:15px;
     margin-bottom:15px;
     line-height: 1.6;
+    font-size:18px;
   }
   #art-display {
     background-image:url(lmaoismbanner.png);
