one with -> one of

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       document.getElementById("signup-button").style.display = "none";
   }
   function goToTweet() {
-    let urlString = encodeURIComponent("My Spirit is One With Revolution 🔥 @lmao_ism [insert_solana_address_here]");
+    let urlString = encodeURIComponent("My Spirit is One of Revolution 🔥 @lmao_ism [insert_solana_address_here]");
     window.location = "https://twitter.com/intent/tweet?url=" + urlString;
   }
   window.onload = function() {
