--- a/index.html
+++ b/index.html
@@ -137,18 +137,17 @@
 <div id="signup">
   <div style="text-align:right; cursor:pointer;"><a onclick="hideSignup()">X</a></div>
   <h1>✊🏼 Claim your free Lmaoism NFT! ✊🏾</h1>
-  <p>In order to participate in Lmaoism, you will need a Solana address and a Twitter account. (If you're making a new Twitter
+  <p>In order to participate in Lmaoism, you will need an Ethereum address and a Twitter account. (If you're making a new Twitter
     for the sake of Lmaoism, post a little bit, follow some people, etc. so we know you're not a bot, and so we know you're ready to speak
     on behalf of the proletariat and the Party.) 
   </p>
   <p>
-    1. Download a <a href="https://solana.com/">Solana</a> wallet and create a public/private keypair. There are many options 
-    for Solana wallets, we recommend <a href="https://phantom.app/">Phantom</a> or <a href="https://solflare.com/">Solflare</a>.
-    Make sure you store your Solana credentials in a safe place.
+    1. Download a <a href="https://ethereum.org/">Ethereum</a> wallet and create a public/private keypair. There are many options 
+    for Solana wallets, we recommend <a href="https://metamask.io/">Metamask</a>.
   </p>
   <p>
     2. Make a tweet that includes the following: 
-    The phrase "My Spirit is One of Revolution", your Solana address, and the tag <a href="http://twitter.com/lmao_ism">@lmao_ism</a>.
+    The phrase "My Spirit is One of Revolution", your Ethereum address, and the tag <a href="http://twitter.com/lmao_ism">@lmao_ism</a>.
   </p>
   <p>
     <div class="centered">
@@ -158,7 +157,7 @@
     </div>
   </p>
   <p>
-    And that's it! A free NFT will be reserved for your Solana address upon project launch.
+    And that's it! A free NFT will be reserved for your Ethereum address upon project launch.
   </p>
 </div>
 <div id="signup-button" class="hype">
@@ -186,18 +185,6 @@
 <p>The capitalist only understands the language of profit, and as such, he will sell the revolutionary workers the rope they will use to hang him.</p>
 <p>In this, we obey democratic centralism by holding to the official line of the Communist Party of China, who have launched the parallel initiatives of the Blockchain-based Service Network (BSN) and the digital RMB (Yuan) for the sake of developing the productive apparatus of the People’s Republic of China, in accordance with the long-term development goals laid out by Xi Jinping and the philosophy of Communism with Chinese Characteristics.</p>
 <p>The digital art pieces in the Lmaoism collection are intended to be investment assets that will increase in value when held in the hands of representatives of the global proletariat, who will have the ability to purchase the art in a mass sale without any of the historic barriers to entry and class stratification seen in the bourgeious-fascist Western contemporary art world. As the pieces accrue in value (which will occur as a result of the increasingly dominant geopolitical position of the People’s Republic of China and the further education of the masses on Xi Jinping Thought), the representatives of the global proletariat in possession of the art will thus acquire increased access to material resources for revolutionary praxis, thus allowing us to “LMAO” as we seize the ability to triumph over the capitalists simply by accelerating their own devious game.</p>
-<h2 id="will-purchasing-art-from-lmaoism-contribute-to-global-warming-or-other-negative-effects-on-the-climate-">Will purchasing art from Lmaoism contribute to global warming or other negative effects on the climate?</h2>
-<p>It is of insurmountable importance for any project of a revolutionary character to consider the effects of industrial production on the natural environment: as this is the soil the peasants farm upon, the water the peasants drink, the air the peasants breathe, and moreover the cradle in which a revolutionary spirit can be nurtured among the masses.</p>
-<p>Critics of Web3 technology often fail to appreciate the crucial difference between two methods of securing a blockchain network:</p>
-<ul>
-<li><p>Proof-of-work: A wasteful, environmentally-degrading process of channeling electricity through large assemblages of specialized hardware (commonly known as “mining”) </p>
-</li>
-<li><p>Proof-of-stake: Use of online voting among a set of representatives (analogous to decision-making in a Marxist-Leninist Politburo or a capitalist governance board)</p>
-</li>
-</ul>
-<p>The glory, justice, and swift decision-making of the People’s Republic of China leadership can be seen in their decision of December 2021 to bring the full fury of the revolutionary state upon the reactionary-fascist elements in the population contributing to environmental degradation through selfish proof-of-work Bitcoin “mining”, with over twenty-five such operations in Sichaun province alone shuttered and trampled under the heel of the onward-marching proletariat. Following the example of the revolutionary state, Web3 users of a communist character cannot and should not tolerate this similar activity amongst their ranks.</p>
-<p>Conversely, comrades who lazily conflate the two divergent forms of network security after a failure to investigate the differences between the two modes of production should be brought to self-criticism for their ignorance. As Mao Zedong said, “No investigation, no right to speak!”</p>
-<p>Therefore, following these considerations, Lmaoism will be distributed on Solana, a proof-of-stake (or "proof-of-history") network, and as such can be minted and traded without malignant effects on the climate.</p>
 <h2 id="what-are-the-long-term-goals-of-lmaoism-">What are the bigger-picture goals of Lmaoism?</h2>
 <p>Disseminating digital artworks of a socialist-realist character, while an important revolutionary task in itself, will be only the initial cusp of the Lmaoism project. Our goal is to develop the world’s first fully-digital revolutionary Communist Party entirely on the blockchain, the uncensorable internationally-accessible nature of which will allow our ideals to spread like wildfire among the globally-online proletariat. DAO technology can allow shared ownership of revolutionary resources trustlessly coordinated by a central committee, which can be delegated to comrades across the globe based on the philosophy of Karl Marx &amp; Fredrick Engels: “From each according to his ability, to each according to his need!”</p>
 <p>We are researching ways to incorporate “code is law” philosophy into Marxist-Leninist praxes such as the mass line, democratic centralism, and self-criticism. Through the use of trustless technology, we can further the discipline amongst party ranks and ensure an unyielding revolutionary spirit of solidarity as we wage our immortal struggle against imperialism and the oppressive institutions which have shackled us in chains.</p>
