--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <title>🇨🇳😂 </title>
-<script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
 <script>
-  console.log(solanaWeb3);
   function hideSignup () {
     document.getElementById("signup").style.display = "none";
       document.getElementById("signup-button").style.display = "block";
@@ -11,7 +9,7 @@
       document.getElementById("signup-button").style.display = "none";
   }
   function goToTweet() {
-    let urlString = encodeURIComponent("My Spirit is One of Revolution 🔥 @lmao_ism [insert_solana_address_here]");
+    let urlString = encodeURIComponent("My Spirit is One of Revolution 🔥 @lmao_ism [insert_ethereum_address_here]");
     window.location = "https://twitter.com/intent/tweet?url=" + urlString;
   }
   window.onload = function() {
@@ -143,7 +141,7 @@
   </p>
   <p>
     1. Download a <a href="https://ethereum.org/">Ethereum</a> wallet and create a public/private keypair. There are many options 
-    for Solana wallets, we recommend <a href="https://metamask.io/">Metamask</a>.
+    for Ethereum wallets, we recommend <a href="https://metamask.io/">Metamask</a>.
   </p>
   <p>
     2. Make a tweet that includes the following: 
